--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodebb-plugin-semail",
-  "version": "0.1.0",
-  "description": "An implementation based on secure mail protocol",
+  "version": "0.2.3",
+  "description": "A starter kit for quickly creating NodeBB plugins",
   "main": "library.js",
   "repository": {
     "type": "git",
@@ -26,12 +26,12 @@
     ]
   },
   "author": {
-    "name": "maikejonne",
-    "email": "maikejonne@gmail.com"
+    "name": "psychozhang",
+    "email": "https://github.com/maikejonne/safeemail/issues"
   },
-  "license": "MIT",
+  "license": "AGPL",
   "bugs": {
-    "url": "https://github.com/maikejonne/safeemail/issues"
+    "url": "http://www.pango123.org"
   },
   "readmeFilename": "README.md",
   "nbbpm": {
@@ -47,8 +47,11 @@
     "lint-staged": "^8.1.0"
   },
   "dependencies": {
+    "eccrypto": "^1.1.1",
+    "express": "^4.16.4",
+    "javascript-blowfish": "github:agorlov/javascript-blowfish",
+    "markdown": "^0.5.0",
     "secp256k1": "2.0.4",
-    "tiny-secp256k1": "^1.0.1",
-    "markdown": "^0.5.0"
+    "tiny-secp256k1": "^1.0.1"
   }
 }
